--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   document.getElementsByTagName("head")[0].appendChild(script);
   function callbackFunc(result) {
    console.log(result, 'result');
-   alert(result.response[0].first_name);
+   alert(result.response.first_name);
   }
   // VK.Api.call('users.get', { user_ids: 829780439, fields: 'bdate' }, function(r) {
   // if(r.response) {
